fix message scroll overflow issue

--- a/src/screens/styles/main.scss
+++ b/src/screens/styles/main.scss
@@ -145,7 +145,7 @@ main {
 
     .messages {
       padding: 1rem;
-      height: 90%;
+      height: 700px;
       overflow-y: auto;
     }
 
